tests/solidity-semantic-tests/out/errors/via_contract_type/B.clear.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/via_contract_type.sol.B.clear_state_program() -> uint64:
main:
    pushint 1
    return
